Finished conclusion first draft Incorporated Dr. Aviles comments Fleshed out chapter 9 results sections Updated graphs and tables with most up to date results

--- a/Apendice/GaiaADQL.tex
+++ b/Apendice/GaiaADQL.tex
@@ -1,6 +1,9 @@
 \chapter{Gaia ADQL Query} \label{apendice:gaiaAdql}
 
-\section{DR3}
+% TODO: formatting new page
+\newpage
+\clearpage
+
 \begin{lstlisting}[ language=SQL,
 	deletekeywords={IDENTITY},
 	deletekeywords={[2]INT},
