--- a/Metodologia/Secciones/NormalizacionFlujos/NormalizacionFlujos.tex
+++ b/Metodologia/Secciones/NormalizacionFlujos/NormalizacionFlujos.tex
@@ -46,7 +46,7 @@ parámetros del modelo
 vez, al tener una manera concreta de evaluar de manera directa la temperatura
 efectiva del sistema es posible conocer la incertidumbre utilizando solo datos
 fotométricos. Para obtener el flujo normalizado de las curvas de ZTF se utilizó
-la magnitud del sistema en la fase 0.25 en la pasabanda ZTF:g. El resultado se
+la magnitud del sistema en la fase 0.25 en el pasabanda ZTF:g. El resultado se
 puede ver en la \reffigure{figuraNormFlujosCurvas}. El código donde se realizó
 este procedimiento se encuentra en el Notebook
 \href{https://github.com/KnightIV/UANL_MAPTA_Observaciones/blob/main/analisis/ztf/light-curve-processing.ipynb}{\code{light-curve-processing.ipynb}}.
