--- a/Muestra/Secciones/Catalogos.tex
+++ b/Muestra/Secciones/Catalogos.tex
@@ -56,7 +56,7 @@ Gaia\footnote{\url{https://www.cosmos.esa.int/web/gaia/focal-plane}}. Tres de
 los grupos de CCDs son los de mayor interés en cuanto a las mediciones
 fotométricas de Gaia: el \textit{Sky Mapper}, los cuales son responsables de
 detectar las fuentes que estén en tránsito del plano focal y de hacer una
-primera medición de la magnitud de la fuente en la pasabanda ancha $G$; y los
+primera medición de la magnitud de la fuente en el pasabanda ancha $G$; y los
 \textit{fotómetros} \textit{azul} y \textit{rojo}, los cuales toman medidas
 espectro-fotométricas de las fuentes en tránsito en las pasabandas $BP$ y $RP$
 respectivamente. Las observaciones integradas y procesadas de cada tránsito para
