--- a/ref.bib
+++ b/ref.bib
@@ -1065,3 +1065,39 @@ ADS Bibcode: 1959cbs..book.....K},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2018JOSS....3..695M},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@article{schlafly_measuring_reddening_sdss_calibrating_sfd_2011,
+	title = {{MEASURING} {REDDENING} {WITH} {SLOAN} {DIGITAL} {SKY} {SURVEY} {STELLAR} {SPECTRA} {AND} {RECALIBRATING} {SFD}},
+	volume = {737},
+	issn = {0004-637X},
+	url = {https://dx.doi.org/10.1088/0004-637X/737/2/103},
+	doi = {10.1088/0004-637X/737/2/103},
+	abstract = {We present measurements of dust reddening using the colors of stars with spectra in the Sloan Digital Sky Survey. We measure reddening as the difference between the measured and predicted colors of a star, as derived from stellar parameters from the Sloan Extension for Galactic Understanding and Exploration Stellar Parameter Pipeline. We achieve uncertainties of 56, 34, 25, and 29 mmag in the colors u − g, g − r, r − i, and i − z, per star, though the uncertainty varies depending on the stellar type and the magnitude of the star. The spectrum-based reddening measurements confirm our earlier “blue tip” reddening measurements, finding reddening coefficients different by −3\%, 1\%, 1\%, and 2\% in u − g, g − r, r − i, and i − z from those found by the blue tip method, after removing a 4\% normalization difference. These results prefer an {RV} = 3.1 Fitzpatrick reddening law to O'Donnell or Cardelli et al. reddening laws. We provide a table of conversion coefficients from the Schlegel et al. ({SFD}) maps of E(B − V) to extinction in 88 bandpasses for four values of {RV}, using this reddening law and the 14\% recalibration of {SFD} first reported by Schlafly et al. and confirmed in this work.},
+	pages = {103},
+	number = {2},
+	journaltitle = {The Astrophysical Journal},
+	shortjournal = {{ApJ}},
+	author = {Schlafly, Edward F. and Finkbeiner, Douglas P.},
+	urldate = {2024-09-17},
+	date = {2011-08},
+	langid = {english},
+	note = {Publisher: The American Astronomical Society}
+}
+
+@article{jones_phoebe_iv_impact_interstellar_extinction_lcs_binaries_2020,
+	title = {Physics of Eclipsing Binaries. {IV}. The Impact of Interstellar Extinction on the Light Curves of Eclipsing Binaries},
+	volume = {247},
+	issn = {0067-0049},
+	url = {https://iopscience.iop.org/article/10.3847/1538-4365/ab7927/meta},
+	doi = {10.3847/1538-4365/ab7927},
+	abstract = {Physics of Eclipsing Binaries. {IV}. The Impact of Interstellar Extinction on the Light Curves of Eclipsing Binaries, David Jones, Kyle E. Conroy, Martin Horvat, Joseph Giammarco, Angela Kochoska, Herbert Pablo, Alex J. Brown, Paulina Sowicka, Andrej Prša},
+	pages = {63},
+	number = {2},
+	journaltitle = {The Astrophysical Journal Supplement Series},
+	shortjournal = {{ApJS}},
+	author = {Jones, David and Conroy, Kyle E. and Horvat, Martin and Giammarco, Joseph and Kochoska, Angela and Pablo, Herbert and Brown, Alex J. and Sowicka, Paulina and Prša, Andrej},
+	urldate = {2024-09-17},
+	date = {2020-04-03},
+	langid = {english},
+	note = {Publisher: {IOP} Publishing},
+}
